force-app/main/default/objects/Vehicle__c/fields/Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Number__c</fullName>
    <label>Engine Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>