force-app/main/default/objects/Vehicle__c/fields/Insurance_Validity_From__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Validity_From__c</fullName>
    <label>Insurance Validity From</label>
    <type>Date</type>
</CustomField>