force-app/main/default/objects/Vehicle__c/fields/Insurance_Validity_To__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Validity_To__c</fullName>
    <label>Insurance Validity To</label>
    <type>Date</type>
</CustomField>