force-app/main/default/objects/Vehicle__c/fields/PAN_GIR_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_GIR_No__c</fullName>
    <label>PAN-GIR No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>