force-app/main/default/objects/Vehicle__c/fields/Vehicle_Class__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Class__c</fullName>
    <label>Vehicle Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Passenger Cars</fullName>
            </value>
            <value>
                <fullName>2 Axle - 4 Tier Unit</fullName>
            </value>
            <value>
                <fullName>Busses</fullName>
            </value>
            <value>
                <fullName>2 Axle - 6 Tier Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>