force-app/main/default/objects/Vehicle__c/fields/Vehicle_Owner__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle_Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vehicle</relationshipLabel>
    <relationshipName>Insured_Vehicle</relationshipName>
    <type>Lookup</type>
</CustomField>