force-app/main/default/objects/Vehicle__c/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <label>VIN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>