force-app/main/default/objects/Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Company_Name__c</columns>
    <columns>VIN__c</columns>
    <columns>Insurance_Validity_From__c</columns>
    <columns>Insurance_Validity_To__c</columns>
    <columns>Purchase_Date__c</columns>
    <columns>Registration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>